--- a/tokens/config.json
+++ b/tokens/config.json
@@ -187,24 +187,28 @@
         },
         "alpha": {
           "bg": {
-            "value": "0.3",
-            "type": "other"
+            "default": {
+              "value": "0.3",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.4",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.5",
+              "type": "other"
+            },
+            "onDefault": {
+              "value": "0.2",
+              "type": "other"
+            }
           },
           "border": {
-            "value": "0.5",
-            "type": "other"
-          },
-          "onDefault": {
-            "value": "0.2",
-            "type": "other"
-          },
-          "hover": {
-            "value": "0.4",
-            "type": "other"
-          },
-          "active": {
-            "value": "0.5",
-            "type": "other"
+            "default": {
+              "value": "0.5",
+              "type": "other"
+            }
           }
         },
         "lighten": {
@@ -243,24 +247,28 @@
         },
         "alpha": {
           "bg": {
-            "value": "0.4",
-            "type": "other"
+            "default": {
+              "value": "0.4",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.5",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.6",
+              "type": "other"
+            },
+            "onDefault": {
+              "value": "0.15",
+              "type": "other"
+            }
           },
           "border": {
-            "value": "0.6",
-            "type": "other"
-          },
-          "onDefault": {
-            "value": "0.15",
-            "type": "other"
-          },
-          "hover": {
-            "value": "0.5",
-            "type": "other"
-          },
-          "active": {
-            "value": "0.6",
-            "type": "other"
+            "default": {
+              "value": "0.6",
+              "type": "other"
+            }
           }
         },
         "lighten": {
@@ -299,24 +307,28 @@
         },
         "alpha": {
           "bg": {
-            "value": "0.15",
-            "type": "other"
+            "default": {
+              "value": "0.15",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.25",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.35",
+              "type": "other"
+            },
+            "onDefault": {
+              "value": "0.2",
+              "type": "other"
+            }
           },
           "border": {
-            "value": "0.35",
-            "type": "other"
-          },
-          "onDefault": {
-            "value": "0.2",
-            "type": "other"
-          },
-          "hover": {
-            "value": "0.25",
-            "type": "other"
-          },
-          "active": {
-            "value": "0.35",
-            "type": "other"
+            "default": {
+              "value": "0.35",
+              "type": "other"
+            }
           },
           "unchecked": {
             "bg": {
@@ -377,16 +389,16 @@
               "value": "0.4",
               "type": "other"
             },
-            "onDefault": {
-              "value": "0.2",
-              "type": "other"
-            },
             "hover": {
               "value": "0.5",
               "type": "other"
             },
             "active": {
               "value": "0.6",
+              "type": "other"
+            },
+            "onDefault": {
+              "value": "0.2",
               "type": "other"
             }
           },
@@ -437,16 +449,16 @@
               "value": "0.3",
               "type": "other"
             },
-            "onDefault": {
-              "value": "0.2",
-              "type": "other"
-            },
             "hover": {
               "value": "0.4",
               "type": "other"
             },
             "active": {
               "value": "0.5",
+              "type": "other"
+            },
+            "onDefault": {
+              "value": "0.2",
               "type": "other"
             }
           },
@@ -503,16 +515,16 @@
               "value": "0.4",
               "type": "other"
             },
-            "onDefault": {
-              "value": "0.2",
-              "type": "other"
-            },
             "hover": {
               "value": "0.5",
               "type": "other"
             },
             "active": {
               "value": "0.6",
+              "type": "other"
+            },
+            "onDefault": {
+              "value": "0.2",
               "type": "other"
             }
           },
@@ -548,10 +560,6 @@
             "value": "0.1",
             "type": "other"
           },
-          "onDefault": {
-            "value": "0.2",
-            "type": "other"
-          },
           "hover": {
             "value": "0.1",
             "type": "other"
@@ -559,24 +567,36 @@
           "active": {
             "value": "0.2",
             "type": "other"
+          },
+          "onDefault": {
+            "value": "0.2",
+            "type": "other"
           }
         },
         "alpha": {
           "bg": {
-            "value": "0.4",
-            "type": "other"
+            "default": {
+              "value": "0.4",
+              "type": "other"
+            },
+            "hover": {
+              "value": "0.5",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.6",
+              "type": "other"
+            },
+            "onDefault": {
+              "value": "0.2",
+              "type": "other"
+            }
           },
           "border": {
-            "value": "0.6",
-            "type": "other"
-          },
-          "hover": {
-            "value": "0.5",
-            "type": "other"
-          },
-          "active": {
-            "value": "0.6",
-            "type": "other"
+            "default": {
+              "value": "0.6",
+              "type": "other"
+            }
           }
         },
         "lighten": {
