--- a/tokens/application.json
+++ b/tokens/application.json
@@ -932,7 +932,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%, {config.color.neutral.alpha.unchecked.bg})"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%, {config.color.neutral.alpha.unchecked.bg.default})"
             }
           },
           "border": {
@@ -942,7 +942,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%, {config.color.neutral.alpha.unchecked.bg})"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%, {config.color.neutral.alpha.unchecked.bg.default})"
             }
           },
           "fg": {
