--- a/tokens/config.json
+++ b/tokens/config.json
@@ -332,20 +332,24 @@
           },
           "unchecked": {
             "bg": {
-              "value": "0.4",
-              "type": "other"
+              "default": {
+                "value": "0.4",
+                "type": "other"
+              },
+              "hover": {
+                "value": "0.5",
+                "type": "other"
+              },
+              "active": {
+                "value": "0.6",
+                "type": "other"
+              }
             },
             "border": {
-              "value": "0.6",
-              "type": "other"
-            },
-            "hover": {
-              "value": "0.5",
-              "type": "other"
-            },
-            "active": {
-              "value": "0.6",
-              "type": "other"
+              "default": {
+                "value": "0.6",
+                "type": "other"
+              }
             }
           }
         },
