--- a/tokens/application.json
+++ b/tokens/application.json
@@ -942,7 +942,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%, {config.color.neutral.alpha.unchecked.bg.default})"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%, {config.color.neutral.alpha.unchecked.border.default})"
             }
           },
           "fg": {
