wip: mask token, monospace fallback font

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -926,7 +926,7 @@
         },
         "initials": {
           "value": {
-            "fontFamily": "{config.fontFamily.uiAlt}",
+            "fontFamily": "{config.fontFamily.uiAlt}, ui-monospace",
             "fontWeight": "{config.fontWeight.medium}",
             "lineHeight": "120%",
             "fontSize": "{config.fontSize.control}"
