--- a/tokens/config.json
+++ b/tokens/config.json
@@ -18,7 +18,7 @@
         "type": "fontFamilies"
       },
       "uiAlt": {
-        "value": "Margiela Mono",
+        "value": "Margiela Mono, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, \"Liberation Mono\", \"Courier New\", monospace",
         "type": "fontFamilies"
       },
       "symbol": {
